--- a/package.json
+++ b/package.json
@@ -1,17 +1,33 @@
 {
-  "name": "code-copy-race",
-  "version": "1.0.0",
+  "name": "codings",
+  "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev:server": "bun run server/index.ts",
-    "dev:client": "cd client && bun run dev",
-    "dev": "bunx concurrently -n server,client -c \"blue.bold\",\"magenta.bold\" \"bun run dev:server\" \"bun run dev:client\""
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint"
   },
-  "dependencies": {},
+  "dependencies": {
+    "next": "16.1.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
+    "tailwind-merge": "^3.4.0"
+  },
   "devDependencies": {
-    "bun-types": "^1.0.11",
-    "concurrently": "^8.2.2",
-    "typescript": "^5.6.3"
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.1",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
